--- a/myapp/templates/contact_us.html
+++ b/myapp/templates/contact_us.html
@@ -13,13 +13,13 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/05a24c4f06.js" crossorigin="anonymous"></script>
     <!-- styles -->
     <link href="{%static 'css/plugins.css' %}" rel="stylesheet" type="text/css">
     <link href="{%static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <style>
         
-    .skill-content{
+    .skill-content{ 
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(200px,auto));
     grid-gap:2rem;
@@ -94,8 +94,10 @@ body, button, input {
 
 .background {
   display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
-  margin-left: 350px;
+  /* margin-left: 350px; */
 }
 
 .container {
@@ -132,6 +134,9 @@ body, button, input {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
+#social:hover {
+        color: #0056b3; /* New background color on hover */
+    }
 
 .screen-header-left {
   margin-right: auto;
@@ -281,6 +286,7 @@ body, button, input {
   margin: 0 5px;
 }
 
+
 @media screen and (max-width: 520px) {
   .screen-body {
     flex-direction: column;
@@ -312,6 +318,7 @@ body, button, input {
     padding: 0;
   }
 }
+
     </style>
 </head>
 
@@ -344,22 +351,22 @@ body, button, input {
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown" style="margin-right: 40px; padding: 10px; font-size: larger;">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="{%url 'index' %}">Home</a>
+                <a class="nav-link" href="{%url 'index' %}" id="social">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{%url 'about-us' %}">About</a>
+                <a class="nav-link" href="{%url 'about-us' %}" id="social">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Our Team</a>
+                <a class="nav-link" href="#" id="social">Our Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{%url 'chatbot' %}">Try Us</a>
+                <a class="nav-link" href="{%url 'chatbot' %}" id="social">Try Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{%url 'technology' %}">Technology</a>
+                <a class="nav-link" href="{%url 'technology' %}" id="social"> Technology</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{%url 'contact-us' %}">Contact</a>
+                <a class="nav-link" href="{%url 'contact-us' %}" id="social">Contact</a>
               </li>
             </ul>
           </div>
@@ -398,76 +405,68 @@ body, button, input {
     <!-- nav-container end -->
 
     <!-- animsition-overlay start -->
-    <main class="animsition-overlay" data-animsition-overlay="true">
+    <main class="animsition-overlay" data-animsition-overlay="true" style="background-color: #1c1818;">
         <!-- home-slider start -->
-        <section class="home-slider" id="up">
+        <!-- <section class="home-slider" id="up"> -->
             <!-- swiper-wrapper start -->
-            <div class="swiper-wrapper">
+            <!-- <div class="swiper-wrapper"> -->
                 
         <!-- <section id="down" class="dark-bg-1 flex-min-height-box"> -->
             <!-- flex-min-height-inner start -->
-            <div class="background" >
-              <div class="container">
-                <div class="screen">
-                  <div class="screen-header">
-                    <div class="screen-header-left">
-                      <div class="screen-header-button close"></div>
-                      <div class="screen-header-button maximize"></div>
-                      <div class="screen-header-button minimize"></div>
-                    </div>
-                    <div class="screen-header-right">
-                      <div class="screen-header-ellipsis"></div>
-                      <div class="screen-header-ellipsis"></div>
-                      <div class="screen-header-ellipsis"></div>
-                    </div>
-                  </div>
-                  <div class="screen-body">
-                    <div class="screen-body-item left">
-                      <div class="app-title">
-                        <span>CONTACT</span>
-                        <span>US</span>
-                      </div>
-                      <div class="app-contact">CONTACT INFO : +62 81 314 928 595</div>
-                    </div>
-                    <div class="screen-body-item">
-                      <form method="post">
-                          {% csrf_token %}
-                          <div class="app-form">
-                              <div class="app-form-group">
-                                  <input class="app-form-control" type="text" name="name" placeholder="NAME">
-                              </div>
-                              <div class="app-form-group">
-                                  <input class="app-form-control" type="email" name="email" placeholder="EMAIL">
-                              </div>
-                              <div class="app-form-group message">
-                                  <textarea class="app-form-control" name="message" placeholder="MESSAGE"></textarea>
-                              </div>
-                              <div class="app-form-group buttons">
-                                  <button class="app-form-button" type="submit">SEND</button>
+            <div class="container">
+              <div class="row">
+                  <div class="col-3"></div>
+                  <div class="col-6">
+                      <div class="background">
+                          <div class="container">
+                              <div class="screen">
+                                  <div class="screen-header">
+                                      <div class="screen-header-left">
+                                          <div class="screen-header-button close"></div>
+                                          <div class="screen-header-button maximize"></div>
+                                          <div class="screen-header-button minimize"></div>
+                                      </div>
+                                      <div class="screen-header-right">
+                                          <div class="screen-header-ellipsis"></div>
+                                          <div class="screen-header-ellipsis"></div>
+                                          <div class="screen-header-ellipsis"></div>
+                                      </div>
+                                  </div>
+                                  <div class="screen-body">
+                                      <div class="screen-body-item left">
+                                          <div class="app-title" >
+                                              <span>CONTACT</span>
+                                              <span>US</span>
+                                          </div>
+                                          <div class="app-contact">CONTACT INFO: +62 81 314 928 595</div>
+                                      </div>
+                                      <div class="screen-body-item">
+                                          <form method="post">
+                                              {% csrf_token %}
+                                              <div class="app-form">
+                                                  <div class="app-form-group">
+                                                      <input class="app-form-control" type="text" name="name" placeholder="NAME">
+                                                  </div>
+                                                  <div class="app-form-group">
+                                                      <input class="app-form-control" type="email" name="email" placeholder="EMAIL">
+                                                  </div>
+                                                  <div class="app-form-group message">
+                                                      <textarea class="app-form-control" name="message" placeholder="MESSAGE"></textarea>
+                                                  </div>
+                                                  <div class="app-form-group buttons">
+                                                      <button class="app-form-button" type="submit">SEND</button>
+                                                  </div>
+                                              </div>
+                                          </form>
+                                      </div>
+                                  </div>
                               </div>
                           </div>
-                      </form>
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-                    </div>
+                      </div>
                   </div>
-                </div>
-                
+                  <div class="col-3"></div>
               </div>
-            </div>
+          </div>
             <!-- flex-min-height-inner end -->
         <!-- </section> -->
         
@@ -503,28 +502,20 @@ body, button, input {
             <div class="four-columns bottom-padding-60">
                 <div class="content-left-right-margin-10 footer-center-mobile">
                     <ul class="footer-information text-color-4">
-                        <li><i class="far fa-envelope"></i><a href="#" class="xsmall-title-oswald">.</a></li>
-                        <li><i class="fas fa-mobile-alt"></i><a href="#" class="xsmall-title-oswald">Phone Number</a></li>
-                        <li><i class="fas fa-map-marker-alt"></i><a href="#" class="xsmall-title-oswald text-height-17">Address<br><span>East Victoria 2006 UK</span></a></li>
+                        <li><i class="far fa-envelope" style="font-size: medium;" id="social"></i><a href="#" style="font-size: small;" id="social">jezt.technologies@gmail.com</jezt.technologies></a></li>
+                        <li><i class="fas fa-mobile-alt" style="font-size: medium;" id="social"></i><a href="#" style="font-size: small;" id="social">Phone Number</a></li>
+                        <li><i class="fas fa-map-marker-alt" style="font-size: medium;" id="social"></i><a href="#" style="font-size: small;" id="social">Kakkanad<br><span>Kerala</span></a></li>
                     </ul>
                 </div>
             </div>
             <!-- column end -->
             <!-- column start -->
             <div class="three-columns bottom-padding-60">
-                <div class="content-left-margin-10">
-                    <ul class="footer-social">
-                        <li>
-                            <div class="flip-btn-box">
-                                <a href="#" class="flip-btn pointer-small" data-text="Instagram">Instagram</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="flip-btn-box">
-                                <a href="#" class="flip-btn pointer-small" data-text="Facebook">Facebook</a>
-                            </div>
-                        </li>
-                
+                 <div class="content-left-right-margin-10 footer-center-mobile">
+                    <ul class="footer-information text-color-4">
+                        <li><i class='bx bxl-instagram' style="font-size: x-large;" id="social"></i><a href="#" class="" style="font-size: medium;" id="social">Instagram</a></li>
+                        <li><i class='bx bxl-linkedin-square' style="font-size: x-large;" id="social"></i><a href="#" style="font-size: medium;" id="social">Linked in</a></li>
+                        <li><i class='bx bxl-facebook-circle' style="font-size: x-large;" id="social"></i><a href="#" style="font-size: medium;" id="social"> Facebook</a></li>
                     </ul>
                 </div>
             </div>
