--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -407,15 +407,15 @@
             <!-- bottom-padding-90 end -->
 
             <!-- bottom-padding-90 start -->
-            <div class="bottom-padding-90">
+            <!-- <div class="bottom-padding-90"> -->
                 <!-- portfolio-content start -->
-                <div class="portfolio-content flex-min-height-box">
+                <!-- <div class="portfolio-content flex-min-height-box"> -->
                     <!-- portfolio-content-inner start -->
-                    <div class="portfolio-content-inner flex-min-height-inner">
+                    <!-- <div class="portfolio-content-inner flex-min-height-inner"> -->
                         <!-- flex-container start -->
-                        <div class="flex-container container small">
+                        <!-- <div class="flex-container container small"> -->
                             <!-- column start -->
-                            <div data-animation-container class="six-columns">
+                            <!-- <div data-animation-container class="six-columns">
                                 <div class="content-right-margin-40">
                                     <span class="small-title-oswald red-color overlay-anim-box2" data-animation="overlay-anim2">artificial intelligence</span>
                                     <h3 class="title-style text-color-1">
@@ -430,41 +430,41 @@
                                     </div>
 
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- column end -->
                             <!-- column start -->
-                            <div class="six-columns top-padding-60">
-                                <a href="" class="portfolio-content-bg-box pointer-large hover-box hidden-box animsition-link">
-                                    <div class="portfolio-content-bg hover-img overlay-anim-box2 overlay-dark-bg-2" data-animation="overlay-anim2" style="background-image:url('{%static 'images/projects/P3.jpeg' %}')"></div>
-                                </a>
-                            </div>
+                            <!-- <div class="six-columns top-padding-60"> -->
+                                <!-- <a href="" class="portfolio-content-bg-box pointer-large hover-box hidden-box animsition-link"> -->
+                               <!-- <div class="portfolio-content-bg hover-img overlay-anim-box2 overlay-dark-bg-2" data-animation="overlay-anim2" style="background-image:url('{%static 'images/projects/P3.jpeg' %}')"></div> -->
+                                <!-- </a> -->
+                            <!-- </div> -->
                             <!-- column end -->
-                        </div>
+                        <!-- </div> -->
                         <!-- flex-container end -->
-                    </div>
+                    <!-- </div> -->
                     <!-- portfolio-content-inner end -->
-                </div>
+                <!-- </div> -->
                 <!-- portfolio-content end -->
-            </div>
+            <!-- </div> -->
             <!-- bottom-padding-90 end -->
 
             <!-- bottom-padding-90 start -->
-            <div class="bottom-padding-90">
+            <!-- <div class="bottom-padding-90"> -->
                 <!-- portfolio-content start -->
-                <div class="portfolio-content flex-min-height-box">
+                <!-- <div class="portfolio-content flex-min-height-box"> -->
                     <!-- portfolio-content-inner start -->
-                    <div class="portfolio-content-inner flex-min-height-inner">
+                    <!-- <div class="portfolio-content-inner flex-min-height-inner"> -->
                         <!-- flex-container start -->
-                        <div class="flex-container reverse container small">
+                        <!-- <div class="flex-container reverse container small"> -->
                             <!-- column start -->
-                            <div class="six-columns top-padding-60">
+                            <!-- <div class="six-columns top-padding-60">
                                 <a href="project.html" class="portfolio-content-bg-box pointer-large hover-box hidden-box animsition-link">
                                     <div class="portfolio-content-bg hover-img overlay-anim-box2 overlay-dark-bg-2" data-animation="overlay-anim2" style="background-image:url('{%static 'images/projects/P3.webp' %}')"></div>
                                 </a>
-                            </div>
+                            </div> -->
                             <!-- column end -->
                             <!-- column start -->
-                            <div data-animation-container class="six-columns">
+                            <!-- <div data-animation-container class="six-columns">
                                 <div class="content-left-margin-40">
                                     <span class="small-title-oswald red-color overlay-anim-box2" data-animation="overlay-anim2">artificial intelligence</span>
                                     <h3 class="title-style text-color-1">
@@ -480,15 +480,15 @@
                                     </div>
 
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- column end -->
-                        </div>
+                        <!-- </div> -->
                         <!-- flex-container end -->
-                    </div>
+                    <!-- </div> -->
                     <!-- portfolio-content-inner end -->
-                </div>
+                <!-- </div> -->
                 <!-- portfolio-content end -->
-            </div>
+            <!-- </div> -->
             <!-- bottom-padding-90 end -->
         </section>
         <!-- section end -->
@@ -517,22 +517,22 @@
                         <div class="slider-container">
                             <div class="cards">
                                 <div class="card">
-                                    <h1>Machine Learning</h1>
+                                    <h3>Machine Learning</h3>
                                 </div>
                                 <div class="card">
-                                    <h1>Artificial Intelligence</h1>
+                                    <h3>Artificial Intelligence</h3>
                                 </div>
                                 <div class="card">
-                                    <h1>Robotics</h1>
+                                    <h3>Robotics</h3>
                                 </div>
                                 <div class="card">
-                                    <h1>Internet of Things</h1>
+                                    <h3>Internet of Things</h3>
                                 </div>
                                 <div class="card">
-                                    <h1>Web Applications</h1>
+                                    <h3>Web Applications</h3>
                                 </div>
                                 <div class="card">
-                                    <h1>Cloud Computing</h1>
+                                    <h3>Cloud Computing</h3>
                                 </div>
     
                                 <!-- Add more cards as needed -->
