--- a/myapp/templates/contact_us.html
+++ b/myapp/templates/contact_us.html
@@ -440,7 +440,7 @@ body, button, input {
                                               <span>CONTACT</span>
                                               <span>US</span>
                                           </div>
-                                          <div class="app-contact">CONTACT INFO: +62 81 314 928 595</div>
+                                          <!-- <div class="app-contact">CONTACT INFO: +62 81 314 928 595</div> -->
                                       </div>
                                       <div class="screen-body-item">
                                           <form method="post">
@@ -505,7 +505,7 @@ body, button, input {
                 <div class="content-left-right-margin-10 footer-center-mobile">
                     <ul class="footer-information text-color-4">
                         <li><i class="far fa-envelope" style="font-size: medium;" id="social"></i><a href="#" style="font-size: small;" id="social">jezt.technologies@gmail.com</jezt.technologies></a></li>
-                        <li><i class="fas fa-mobile-alt" style="font-size: medium;" id="social"></i><a href="#" style="font-size: small;" id="social">Phone Number</a></li>
+                        <li><i class="fas fa-mobile-alt" style="font-size: medium;" id="social"></i><a href="#" style="font-size: small;" id="social">+91 8921305309</a></li>
                         <li><i class="fas fa-map-marker-alt" style="font-size: medium;" id="social"></i><a href="#" style="font-size: small;" id="social">Kakkanad<br><span>Kerala</span></a></li>
                     </ul>
                 </div>
